
// command line : Excel_Converter.exe D:\svn\baseball\doc\design\excel\code\excel_enum.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_db.txt 


// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_quest
{
	optional int64 db_id = 1; 	// Tbl_Quest_id_t [고유번호]  
	optional int32 quest_sid = 2; 	// Sys_Quest_id_t [수행한 퀘스트 sid] 디펄트명은 pp_name이다 
	optional int64 uid = 3; 	// Tbl_User_id_t [유저id]  
	optional string date_insert = 4; 	// SYSTEMTIME [등록시간] 최초 수행 등록일 
	optional string date_done = 5; 	// SYSTEMTIME [완료시간] 완료시 시간 
	optional string info = 6; 	// aname256_t [수행 정보] 퀘스트별 수행시 기록될 파라미터 
	optional int32 done_count = 7; 	// int32 [수행한 횟수]  
}//massage s_tbl_quest



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_result
{
	optional int64 db_id = 1; 	// Tbl_Result_id_t [game고유번호]  
	optional int64 win_uid = 2; 	// Tbl_User_id_t [고유번호] 승자 고유번호 
	optional int64 win_better = 3; 	// Tbl_PlayerBetter_id_t [타자 pid] 승자 
	optional int64 win_pitcher = 4; 	// Tbl_PlayerPitcher_id_t [투수 pid] 승자 
	optional int32 win_score = 5; 	// int8 [승자스코어]  
	optional int32 win_elo_point = 6; 	// int32 [ELO_포인트] 경기에서 승 했을 시 사용자에게 플러스 되는 매칭용 포인트 
	optional int64 lose_uid = 7; 	// Tbl_User_id_t [고유번호] 패자 고유번호 
	optional int64 lose_better = 8; 	// Tbl_PlayerBetter_id_t [타자 pid] 패자 
	optional int64 lose_pitcher = 9; 	// Tbl_PlayerPitcher_id_t [투수 pid] 패자 
	optional int32 lose_score = 10; 	// int8 [패자스코어]  
	optional int32 lose_elo_point = 11; 	// int32 [ELO_포인트] 경기에서 패 했을 시  사용자에게 마이너스 되는 매칭용 포인트 
	optional int32 play_time_sec = 12; 	// int32 [플레이시간] 플레이 한 시간(초) 
	optional string time_end = 13; 	// SYSTEMTIME [게임종료시간] 플레이 시간 (2012-12-15 13:53:15) 
}//massage s_tbl_result



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_roundresult
{
	optional int64 db_id = 1; 	// Tbl_RoundResult_id_t [고유번호] 일별 파티션 키 
	optional int64 grid = 2; 	// Tbl_Result_id_t [Tbl_Result테이블의 고유번호]  
	optional int32 used_batter_id = 3; 	// Sys_Better_id_t [선택 된 타자 id] 선택 된 타자 id (8개) 
	optional int32 used_pitcher_id = 4; 	// Sys_Pitcher_id_t [선택 된 투수 id] 선택 된 투수 id (8개) 
	optional int32 round_number = 5; 	// int8 [라운드번호] 1부터시작. 1~10은 라운드 한게임의 토탈집계는 Tbl_Result에 저장 
	optional int32 used_breakingball = 6; 	// EPlayerBreakingBall [투수의 사용 구종] 사용한 구종의 종류 
	optional int32 used_breakingball_speed = 7; 	// int16 [투수의 사용 구종의 구속] 사용한 구종의 속도 
	optional int32 used_pitcherability = 8; 	// EPitcherAbility [사용하고 있는 투수의 스킬(변화구 제외)] 스텟에 영향을 준 투수의 특수능력 
	optional int32 pitching_rhythm_judge = 9; 	// ERhythmJudge [투구 시 제구 타이밍] 투구 시 제구 타이밍의 종류 
	optional int32 used_gesturetype = 10; 	// EGestureType [사용한 제스처 종류] 사용한 제스처 종류 
	optional int32 gesturetype_input_error = 11; 	// int16 [제스처 입력 오류 횟수] 제스처 입력 오류 횟수 
	optional int32 used_batting_fullpower = 12; 	// EHitType [타자 히트 시 라운드 별 풀파워 사용] 타자 히트의 종류(일반히트_스트롱히트_헛스윙_대기상태) 
	optional int32 batting_timing_judge = 13; 	// EHitTimmingType [타격 시 라운드 별 타격 타이밍] 타격 시 타이밍 종류(veryfast_fast_goodfast_perfect_goodslow_slow_veryslow) 
	optional int32 batting_hittype = 14; 	// EBatterHitType [타격 시 라운드 별 히트 타입] 타격 시 히트 타입 
	optional int64 uid_attack = 15; 	// Tbl_User_id_t [uid_attack] 공격자 
	optional int32 score = 16; 	// int8 [better의점수]  
	optional int32 base_runner_state = 17; 	// int8 [출루한주자수] bit flag로 출루한 주자상태를 표시한다. 1루는 2^0 최대는 xml에서  i_max_runner_per_game=19이다 
	optional int32 hit_type = 18; 	// EBatterHitType [안타종류]  
}//massage s_tbl_roundresult



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_user
{
	optional int64 db_id = 1; 	// Tbl_User_id_t [고유번호]  
	optional int64 pp_id = 2; 	// int64 [피망ID] MemberInfo의 (game_id)피망에서 온 id를 그대로 사용 
	optional string host_type = 3; 	// aname32_t [HOST_TYPE] 0-pp user 1-facebook 2-카톡 
	optional string uname = 4; 	// aname32_t [닉네임] 베이스볼에서의 유저닉네임 
	optional int32 discon_tot = 5; 	// int32 [총Disconnect수] 게임중간에 나간수 
	optional int32 win_tot = 6; 	// int32 [총전적_승] 토탈 승 카운트 
	optional int32 win_tot_continue = 7; 	// int32 [연승패] 연속으로 승리한 개수. 음수면 연패 
	optional int32 win_tot_continue_max = 8; 	// int32 [최대연승] 최대연승 
	optional int32 lose_tot = 9; 	// int32 [총전적_패] 토탈 패 카운트 
	optional int32 win_season = 10; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
	optional int32 lose_season = 11; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
	optional int32 batter_tot_homerun = 12; 	// int16 [총_홈런수] 타자총_홈런 
	optional int32 pitcher_tot_strikeout = 13; 	// int16 [탈삼진수] 투수총_탈삼진 
	optional int32 batter_tot_homerun_season = 14; 	// int16 [시즌 총_홈런수] 시즌 타자총_홈런 
	optional int32 pitcher_tot_strikeout_season = 15; 	// int16 [시즌 탈삼진수] 시즌 투수총_탈삼진 
	optional int32 elo_point = 16; 	// int32 [ELO_포인트] 경기마다 캐릭터에 갱신되는 매칭용 포인트 
	optional int64 cash_item_buy_money_amount = 17; 	// int64 [캐쉬템구매누적액] 캐쉬템구매 누적액 
	optional string time_last_login = 18; 	// SYSTEMTIME [마지막로긴시간] 마지막로긴시간 
	optional string time_last_logout = 19; 	// SYSTEMTIME [마지막로그아웃시간] 마지막 로그아웃시간 
	optional int32 day_continue_attend = 20; 	// int16 [연속출석일수] 연속출석한 일수 
	optional string client_os = 21; 	// aname32_t [client_os] 클라 OS ( IOS  ANDROID ) 
	optional string client_networ = 22; 	// aname32_t [client_networ] 클라 네트웍(3G 4G WIFI) 
	optional int64 playtime_tot = 23; 	// int64 [총_플레이_타임] 총_플레이_타임(분) 
}//massage s_tbl_user






